@@ -1,3 +1,8 @@
+2009-06-24  Ian Lance Taylor  <iant@google.com>
+
+	PR 10244
+	* reloc.cc (relocate_sections): Skip empty relocation sections.
+
 2009-06-23  Ian Lance Taylor  <iant@google.com>
 
 	PR 10156
